<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/period"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/one_day_period"
                android:title="@string/one_day" />

            <item
                android:id="@+id/seven_days_period"
                android:title="@string/seven_days" />

            <item
                android:id="@+id/thirty_days_period"
                android:title="@string/thirty_days" />

        </menu>

    </item>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

</menu>